--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "version": 2,
-    "builds": [{ "src": "server.js", "use": "@vercel/node" }],
+    "builds": [{ "src": "./src/server.js", "use": "@vercel/node" }],
     "routes": [
       { "handle": "filesystem" },
-      { "src": "/(.*)", "dest": "server.js" }
+      { "src": "/(.*)", "dest": "./src/server.js" }
     ]
   }
