--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-validator": "^7.0.1",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "prisma": "^5.14.0"
   }
