--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/SuargaOrgs/cloud-computing#readme",
   "dependencies": {
     "@prisma/client": "^5.14.0",
+    "@tensorflow/tfjs": "^4.20.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
