--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@prisma/client": "^5.14.0",
     "@tensorflow/tfjs": "^4.20.0",
+    "@tensorflow/tfjs-node": "^4.20.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -32,6 +33,7 @@
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
+    "path": "^0.12.7",
     "prisma": "^5.14.0"
   }
 }
