--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/SuargaOrgs/cloud-computing#readme",
   "dependencies": {
+    "@google-cloud/storage": "^7.11.2",
     "@prisma/client": "^5.14.0",
+    "@tensorflow/tfjs-node": "^4.20.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -31,6 +33,8 @@
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
-    "prisma": "^5.14.0"
+    "path": "^0.12.7",
+    "prisma": "^5.14.0",
+    "uuid": "^10.0.0"
   }
 }
