--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "API for Suarga App",
   "main": "server.js",
   "scripts": {
-    "start": "node ./src/server.js",
+    "start": "node server.js && npx prisma generate",
     "dev": "nodemon ./src/server.js",
-    "postinstall": "prisma generate",
+    "preinstall": "npm add -D prisma && npx prisma",
+    "install": "npm install @prisma/client",
+    "postinstall": "npx prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -32,9 +34,11 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.0",
     "path": "^0.12.7",
     "prisma": "^5.14.0",
     "uuid": "^10.0.0"
+  }, 
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
